Fixed padding issue, added proper spacing and got links fixed.

--- a/Version6.0/user14/CSS/style.css
+++ b/Version6.0/user14/CSS/style.css
@@ -83,22 +83,23 @@ span {
 
 
 .container{
-    background-color: red;
+    background-color: black;
     padding: 20px;
     color-scheme: normal;
     border-color:#FF00E8;
-    border-width: 2dvh;
+    border-width: 2%, 4%, 4%, 2%;
+    border-style: groove;
     stroke: #FF00E8;
     stroke-width: 2dvh;
     display: inline-block;
-    margin: 3%;
+    margin: 5cm;
     perspective: 1000px;
     transform: skewX(-30deg);
 }
 
 
 .container:hover {
-    box-shadow: #FF00E8;
+    text-shadow: #FF00E8, 2px;
 }
 
 .container>* {
